// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard (unit tests) when current step don't have state should match the snapshot 1`] = `
<kv-wizard current-step="1" show-header="" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" currentstep="1" exportparts="footer-actions-container" prevenabled="" progresspercentage="50" shownextbtn="" showprevbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step have errors should match the snapshot 1`] = `
<kv-wizard current-step="1" current-step-state="error" show-header="" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" currentstep="1" exportparts="footer-actions-container" prevenabled="" progresspercentage="50" shownextbtn="" showprevbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step have success state should match the snapshot 1`] = `
<kv-wizard current-step="1" current-step-state="success" show-header="" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" completeenabled="" currentstep="1" exportparts="footer-actions-container" nextenabled="" prevenabled="" progresspercentage="50" shownextbtn="" showprevbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step is the first one should match the snapshot 1`] = `
<kv-wizard current-step="0" current-step-state="success" show-header="" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Info" label="Step 1"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" completeenabled="" currentstep="0" exportparts="footer-actions-container" nextenabled="" progresspercentage="0" showcancelbtn="" shownextbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when current step is the last one should match the snapshot 1`] = `
<kv-wizard complete-btn-label="Deploy" current-step="2" current-step-state="success" show-header="" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Confirmation" label="Step 3"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" completebtnlabel="Deploy" completeenabled="" currentstep="2" exportparts="footer-actions-container" nextenabled="" prevenabled="" progresspercentage="100" showcompletebtn="" showprevbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when showHeader is false should match the snapshot 1`] = `
<kv-wizard current-step="1" show-step-bar="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" currentstep="1" exportparts="footer-actions-container" prevenabled="" progresspercentage="50" shownextbtn="" showprevbtn="" showstepbar="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;

exports[`Wizard (unit tests) when showStepBar is false should match the snapshot 1`] = `
<kv-wizard current-step="1" show-header="">
  <template shadowrootmode="open">
    <div class="wizard">
      <div class="wizard-header">
        <kv-wizard-header description="Configuration" label="Step 2"></kv-wizard-header>
      </div>
      <div class="has-header wizard-content">
        <slot name="step-content"></slot>
      </div>
      <div class="wizard-footer">
        <kv-wizard-footer cancelenabled="" currentstep="1" exportparts="footer-actions-container" prevenabled="" progresspercentage="50" shownextbtn="" showprevbtn="">
          <slot name="additional-actions" slot="additional-actions"></slot>
        </kv-wizard-footer>
      </div>
    </div>
  </template>
</kv-wizard>
`;
